<resources>
    <string name="app_name">AV_CALCULATOR</string>
    <string name="enter_the_two_numbers">AV_CALCULATOR</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="ac">AC</string>
    <string name="plusminus">)</string>
    <string name="percantage">x!</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="x_2">x^2</string>
    <string name="sqrt">√</string>
    <string name="x">(</string>
    <string name="c">c</string>
    <string name="number1">Number1</string>
    <string name="number2">Number2</string>
</resources>