<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#000000"
    >

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="389dp"
        android:layout_height="140dp"
        android:backgroundTint="#2D98ED"
        android:ems="10"

        android:inputType="numberDecimal"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        android:textColor="@color/white"

        />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="95dp"
        android:layout_height="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.356"
        app:srcCompat="@drawable/button1"
        android:backgroundTint="@color/white"

        />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="95dp"
        android:layout_height="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.508"
        app:srcCompat="@drawable/button3"
        android:backgroundTint="@color/white"
        />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="95dp"
        android:layout_height="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.658"
        app:srcCompat="@drawable/button2"
        android:backgroundTint="@color/white"
        />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="95dp"
        android:layout_height="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.804"
        app:srcCompat="@drawable/button4"
        android:backgroundTint="@color/white"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.105"
        android:textSize="20sp"
        android:textColor="#2356D6"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_two_numbers"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"



        />

    <Button
        android:id="@+id/button7"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:backgroundTint="#000000"
        android:text="@string/_7"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.508"


        />

    <Button
        android:id="@+id/button8"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:backgroundTint="#000000"
        android:text="@string/_8"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <Button
        android:id="@+id/button9"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:backgroundTint="#000000"
        android:text="@string/_9"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.669"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.524" />

    <Button
        android:id="@+id/button4"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.66"
        android:textSize="35sp"
        android:backgroundTint="#000000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.66"
         android:textSize="35sp"
        android:backgroundTint="#000000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.66"
         android:textSize="35sp"
        android:backgroundTint="#000000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.806"
         android:textSize="35sp"
        android:backgroundTint="#000000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.806"
         android:textSize="35sp"
        android:backgroundTint="#000000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:backgroundTint="#000000"
        android:text="@string/_3"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.822" />

    <Button
        android:id="@+id/button10"
        android:layout_width="203dp"
        android:layout_height="74dp"
        android:backgroundTint="#000000"
        android:text="@string/_0"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.968"

        />

    <Button
        android:id="@+id/button11"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.969"
         android:textSize="35sp"
        android:backgroundTint="#000000"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button12"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        app:layout_constraintVertical_bias="0.969"
         android:textSize="35sp"
        android:backgroundTint="#000000"
        android:textStyle="bold"/>

    0

    <Button
        android:id="@+id/button13"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="#D8447F"
        android:text="@string/ac"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336"
        android:layout_marginBottom="2dp"
        />

    <Button
        android:id="@+id/button14"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#000000"
        android:text="@string/plusminus"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342"

        />

    <Button
        android:id="@+id/button15"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:backgroundTint="#000000"
        android:text="@string/percantage"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.668"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452"
        android:layout_marginTop="6dp"

        />

    <Button
        android:id="@+id/button16"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:backgroundTint="#000000"
        android:text="@string/sin"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/button17"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:backgroundTint="#000000"
        android:text="@string/cos"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/button18"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:backgroundTint="#000000"
        android:text="@string/tan"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/button19"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:layout_marginStart="304dp"
        android:backgroundTint="#000000"
        android:text="@string/ln"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <Button
        android:id="@+id/button20"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="#000000"
        android:text="@string/x_2"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.462"
        android:layout_marginBottom="3sp"
        />

    <Button
        android:id="@+id/button21"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:backgroundTint="#000000"
        android:text="@string/sqrt"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <Button
        android:id="@+id/button22"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#000000"
        android:text="@string/x"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button14"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <Button
        android:id="@+id/button23"
        android:layout_width="100dp"
        android:layout_height="74dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#D8447F"
        android:text="@string/c"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="391dp"
        android:layout_height="39dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        android:textSize="20sp"
        android:textColor="@color/white"

        />
</androidx.constraintlayout.widget.ConstraintLayout>